<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- app configuration -->
    <string name="host_name">https://salty-hamlet-5817.herokuapp.com</string>
    <string name="port">443</string>
    <!-- button text -->

    <string name="empty"></string>
    <string name="login_message">Login</string>
    <string name="register_message">Register</string>
    <string name="save_btn">Save</string>
    <string name="edit_btn">Edit Profile</string>
    <string name="profile_btn">Profile</string>
    <string name="search_professor_btn">Search</string>
    <string name="add">Add</string>
    <string name="add_subject">Create New Subject</string>
    <string name="add_recommendation">Create New Recommendation</string>
    <string name="add_subject_to_profile">Add new Subject</string>
    <string name="rate_btn_ratingAct">Rate</string>
    <string name="enter_btn_label">Enter</string>
    <string name="lectures_btn">Lectures</string>

    <!-- hints text -->
    <string name="password_hint">Password</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="description">Description</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="email_hint">example@mail.com </string>
    <string name="subject_name">Subject Name</string>
    <string name="precoAula">Price</string>
    <string name="numStudents">Capacity</string>
    <string name="createGroupLecture">New Group Lecture</string>
    <string name="groupLectures">Group Lectures</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error_hint">Error</string>
    <string name="comment_hint">Type your comment here</string>

    <!-- subject_list_activity -->
    <string name="subject_list_title_label">Your Title</string>
    <string name="price_picker_label">Price:</string>
    <string name="address_label">Address</string>

    <!-- others -->
    <string name="app_name">100Dúvidas</string>
    <string name="title_activity_student_profile">StudentProfileActivity</string>
    <string name="title_activity_teacher_profile">TeacherProfileActivity</string>
    <string name="title_activity_register_user">Register</string>
    <string name="title_activity_user_lectures_tabs">Calendar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="address">Address</string>
    <string name="offered_courses">Offered Courses</string>
    <string name="starred_teachers">Starred Teachers</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="personal_inf">Personal Information</string>
    <string name="user_registered_ok">User saved successfully</string>
    <string name="add_new_subject">Add new Subject</string>
    <string name="subject_registered_ok">Subject registred successfully</string>
    <string name="recommendation_registered_ok">Recommendation registred successfully</string>
    <string name="group_lecture_registered_ok">Group Lecture registred successfully</string>
    <string name="existing_subject"> Subject already exists	</string>
    <string name="existing_recommendation"> Recommendation already exists	</string>
    <string name="search_subject">Search for Subjects</string>
    <string name="search">Search</string>
    <string name="subject_description_label">Description:</string>
    <string name="subject_teacher_label">Teachers:</string>
    <string name="subject_description_content_label">Subject\'s description</string>
    <string name="curriculum_btn">Curriculum</string>
    <string name="schedule_btn">Schedule lecture</string>
    <string name="view_professor_comments_label">Comments:</string>
    <string name="lecture_at">Lecture at</string>
    <string name="group_lecture_at">Group Lecture at</string>
    <string name="group_lecture">Group Lecture</string>
    <string name="scheduled_lecture">Scheduled Lecture</string>
    <string name="address_text_view">Address:</string>
    <string name="teacher_text_view">Teacher:</string>
    <string name="price_text_view">Price:</string>
    <string name="number_subscribers_text_view">Number of Subscribers:</string>
    <string name="lectures_oferred_user">Dates with GroupLectures/Lectures</string>
    <string name="lectures_registered_user">GroupLectures/Lectures that you are registered</string>
	<string name="no_lectures">No lecture on this date</string>
    
    <!-- Subject messages -->
    <string name="subject_added_message">Subject successfully added</string>
    <string name="fields_not_filled"> All fields must be filled</string>

    <!-- Lecture strings -->
    <string name="lecture_confirmation_label">Confirmation</string>
    <string name="lecture_professorname_label">Professor\'s name</string>
    <string name="lecture_subjectname_label">Subject</string>
    <string name="lecture_price_label">Price</string>
    <string name="lecture_address_label">Address</string>
    <string name="lecture_date_label">Date:</string>
    <string name="lecture_confirm_btn">Confirm</string>
    <string name="empty_date_hint">Data can\'t be empty</string>
    <string name="lecture_scheduled_hint">Lecture scheduled!</string>
    <string name="rate_successfully">Rated Successfully</string>

    <!-- Profile string -->
    <string name="profile_city_label">City</string>
    <string name="profile_cirriculum_label"><u>Curriculum</u></string>
    <string name="profile_lectures_label">X Lectures</string>
    <string name="profile_comments_label"><u>X Comments</u></string>
    <string name="profile_refer_btn">Refer</string>
    <string name="profile_pic_label">Picture</string>
    <string name="opts_open">Options</string>
    <string name="male">Male</string>
        <string name="female">Female</string>
    

    <!-- Group Lecture Errors -->
    <string name="addressEmpty">Address can not be empty</string>
    <string name="nameEmpty">Name can not be empty</string>
    <string name="subjectEmpty">A subject must be selected</string>
    <string name="invalidPrice">Price must be higher than zero</string>
    <string name="invalidCapacity">Capcity must be higher than zero</string>

    <!-- facebook -->
    <string name="facebook_app_id">1561113250770242</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_register_subject">RegisterSubjectActivity</string>
    <string name="title_activity_search_professor">SearchProfessorActivity</string>
    <string name="title_activity_register_group_lecture">RegisterGroupLectureActivity</string>
    <string name="title_activity_rating">RatingActivity</string>
    <string name="title_activity_user_lecture_list">UserLectureListActivity</string>
    <string name="title_activity_group_lecture">GroupLectureActivity</string>
    <string name="title_activity_splash">SplashActivity</string>

    <!-- ERROS MSGS -->
    <string name="existing_user">This username and/or email already exisits, choose another</string>
    <string name="invalid_user_pass">Invalid username/password combination. Check again</string>
    <string name="title_activity_view_scheduled_lecture">ViewScheduledLectureActivity</string>
    <string name="conectivity_problems">Sorry! We are facing some temporary problems connecting to our server</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name ="invalid_password_format">Please create a password with at least 6 characters</string>
    <string name="invalid_email_format">Invalid email format</string>

    <!-- Nav drawer options  -->
	<string name="opts_add_subject">Add subject</string>
	<string name="opts_add_grouplecture">New Group Lecture</string>
	<string name="opts_edit_profile">Edit Profile</string>
	<string name="opts_recommend">Recommend</string>
	<string name="opts_logout">Logout</string>    
</resources>