<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nodoubts.MainActivity" >

    <TextView
        android:id="@+id/welcome_mesage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="15dp"
        android:ems="14"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/register_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_name"
        android:layout_below="@+id/welcome_mesage"
        android:text="@string/register_message"
        android:textSize="15sp" />
    
    <EditText
        android:id="@+id/register_name"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/register_user"
        android:ems="10" 
        android:hint="@string/name">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/register_username"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_below="@id/register_name"
        android:layout_alignLeft="@id/register_name"
        android:ems="10" 
        android:hint="@string/username"/>
    
    <EditText
        android:id="@+id/register_email"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_below="@id/register_username"
        android:layout_alignLeft="@id/register_name"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />
    
    <EditText
        android:id="@+id/register_passwordToRegister"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_below="@id/register_email"
        android:layout_alignLeft="@id/register_name"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/createUserBtn"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/register_passwordToRegister"
        android:layout_below="@+id/register_passwordToRegister"
        android:text="@string/save_btn"
        android:textColor="#ffffff" />

</RelativeLayout>
