<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nodoubts.RegisterGroupLectureActivity" 
    android:orientation="vertical">

    <EditText
        android:id="@+id/name_group_lecture_ed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />
    
    <EditText
        android:id="@+id/address_group_lecture_ed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address" />
    
    <EditText
        android:id="@+id/price_group_lecture_ed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/precoAula"
        android:inputType="number" />
    
    <EditText
        android:id="@+id/num_group_lecture_ed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numStudents" 
        android:inputType="number"/>

    <DatePicker 
        android:id="@+id/datePicker_group_lecture_ed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    
    <Button
        android:id="@+id/register_group_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/save_btn" />

</LinearLayout>
