<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nodoubts.ui.profile.EditProfileActivity" >

    <TextView
        android:id="@+id/personal_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="@string/personal_inf" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/personal_information"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="121dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/city_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/name_edit_text"
        android:layout_below="@id/name_edit_text"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/save_btn" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignBottom="@+id/name_edit_text"
        android:layout_alignLeft="@+id/name_edit_text"
        android:layout_marginBottom="26dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/male_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/male" />
        <RadioButton
            android:id="@+id/female_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" 
            android:layout_marginLeft="12dp"/>
    </RadioGroup>

</RelativeLayout>