<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.nodoubts.ProfessorProfileActivity" >

    <TextView
        android:id="@+id/courses_text_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/add_subjectbtn"
        android:gravity="left"
        android:text="@string/offered_courses" />

    <TextView
        android:id="@+id/adress_text_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/name_text_view"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/address" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="126dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/adress_text_field"
        android:layout_marginTop="44dp" >

        <RelativeLayout
            android:id="@+id/profile_pic_layout"
            android:layout_width="126dp"
            android:layout_height="124dp" >

            <ImageView
                android:id="@+id/img_view_teacher"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="false"
                android:baselineAlignBottom="false"
                android:src="@drawable/avatar" />

            <ProgressBar
                android:id="@+id/singleSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/img_view_teacher"
                android:visibility="invisible" />
        </RelativeLayout>

        
    </LinearLayout>

    <Button
        android:id="@+id/add_subjectbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_profilebtn"
        android:layout_alignBottom="@+id/edit_profilebtn"
        android:layout_alignParentRight="true"
        android:text="@string/add_subject_to_profile" />

    <Button
        android:id="@+id/edit_profilebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="14dp"
        android:text="@string/edit_btn" />
    
    <RelativeLayout 
        android:id="@+id/layout_groups_professor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/courses_text_field"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        
        <TextView 
            android:id="@+id/group_lectures_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/groupLectures"/>
        
        <Button 
            android:id="@+id/add_grouplecturebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createGroupLecture"
            android:layout_alignParentRight="true"
            android:layout_alignBaseline="@+id/group_lectures_tv"/>
        
    </RelativeLayout>
    
    <ListView 
        android:id="@+id/list_group_lectures_created"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_groups_professor">
        
    </ListView>

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:text="@string/name" />

    <Button
        android:id="@+id/lectures_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_subjectbtn"
        android:layout_below="@+id/name_text_view"
        android:text="@string/lectures_btn" />

</RelativeLayout>