<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nodoubts.RegisterSubjectActivity" >

    <TextView
        android:id="@+id/register_acitivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:textSize="32sp"
        android:text="@string/add_new_subject" />

    <EditText
        android:id="@+id/new_subject_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_subject_name"
        android:layout_below="@+id/new_subject_name"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:minLines="3"
        android:inputType="textMultiLine" 
        android:hint="@string/description"/>

    <EditText
        android:id="@+id/new_subject_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_acitivity"
        android:layout_below="@+id/register_acitivity"
        android:layout_marginTop="62dp"
        android:ems="10"
        android:hint="@string/name" />

    <Button
        android:id="@+id/btn_add_subject"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_subject_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/add" />

</RelativeLayout>
