<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/view_professor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/view_professor_pic"
            android:layout_width="86dp"
            android:layout_height="92dp"
            android:src="@drawable/avatar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <RatingBar
                android:id="@+id/ratingBar1"
                style="@style/customSmallRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:isIndicator="true" />

            <Button
                android:id="@+id/rate_btn_viewProfAct"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/rate_btn_ratingAct" />

            <TextView
                android:id="@+id/view_professor_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp" >

            <Button
                android:id="@+id/view_curriculum_btn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/curriculum_btn" />

            <Button
                android:id="@+id/view_professor_schedule_lecture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="30dp"
                android:text="@string/schedule_btn" />
        </LinearLayout>

        <TextView
            android:id="@+id/view_comments_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_professor_comments_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ListView
            android:id="@+id/professor_comments_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

    </LinearLayout>

</LinearLayout>
