<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lecture_confirmation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lecture_confirmation_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0.34" >

        <ImageView
            android:id="@+id/lecture_imageview"
            android:layout_width="88dp"
            android:layout_height="54dp"
            android:src="@android:drawable/ic_menu_report_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp" >

            <TextView
                android:id="@+id/professor_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lecture_professorname_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:paddingLeft="14dp" >

                <TextView
                    android:id="@+id/address_textview"
                    android:layout_width="196dp"
                    android:layout_height="55dp"
                    android:text="@string/lecture_address_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/subject_name_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lecture_subjectname_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/price_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lecture_price_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="0.38"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lecture_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/lecture_date_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/date_textfield"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10" />

            <ImageButton
                android:id="@+id/calendar_picker_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_my_calendar" />
        </LinearLayout>

        <TimePicker
            android:id="@+id/timePicker1"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_weight="0.50" />

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/lecture_confirm_btn" />

    </LinearLayout>

</LinearLayout>
