<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="1000dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_picker_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <NumberPicker
        android:id="@+id/price_picker"
        android:layout_width="match_parent"
        android:layout_height="102dp" >
    </NumberPicker>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/create_lecture_cancel"
            style="@style/custom_orange_btn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="0.62"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/create_lecture_ok"
            style="@style/custom_orange_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.65"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>